Make Footer Sticky Bottom

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,12 @@
 @import './styles/design.scss';
 
 .App {
+
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   .cardContainer {
     display: flex;
     flex-wrap: wrap;
