--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -17,5 +17,12 @@
   h1 {
     line-height: 75%;
   }
+
+  .footerSig {
+    font-size: .75em;
+    text-align: left;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+  }
 }
 
