--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -14,6 +14,19 @@
   }
 
   h1 {
+    margin-top: 0;
     line-height: 75%;
+  }
+
+  .blogLink {
+    margin-bottom: 0;
+
+    a {
+      text-decoration: underline;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
