Fix Card Height

--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -6,15 +6,15 @@ $card-width: 300px;
   width: $card-width;
 
   // order: 2;
-  max-height: 500px;
+  height: 400px;
   overflow-y: auto;
 
-  border: 2px solid; 
+  border: 2px solid;
   border-radius: 10px;
   padding: $gap-md;
   margin: $gap-md;
 
-  transition: .5s ease;
+  transition: 0.5s ease;
 
   p {
     width: $card-width - 40px; // width-pad
@@ -46,7 +46,7 @@ $card-width: 300px;
 
 .Card:hover {
   // order: 1;
-  
+
   min-width: $card-width;
   width: $card-width + 30px;
   margin-left: 5px;
@@ -54,7 +54,7 @@ $card-width: 300px;
 
   // background-color: red;
 
-  transition: .5s ease;
+  transition: 0.5s ease;
 
   .displayHover {
     display: block;
