--- a/src/pages/Blog.scss
+++ b/src/pages/Blog.scss
@@ -1,6 +1,6 @@
 @import '../styles/design.scss';
 
-.Projects {
+.Blog {
 
   height: 100vh;
   display: flex;
@@ -18,3 +18,4 @@
     margin: $gap-md;
   }
 }
+
