--- a/src/pages/Blog.scss
+++ b/src/pages/Blog.scss
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
 
-  .cardContainer {
+  .blogPostContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
