--- a/src/styles/design.scss
+++ b/src/styles/design.scss
@@ -1,3 +1,9 @@
 $gap-sm: 10px;
 $gap-md: 20px;
 $gap-lg: 30px;
+
+$border-width: 2px;
+$border-radius: 10px;
+
+$card-width: 300px;
+$card-height: 400px;
